17638
In REPL:
```scala
scala> import scala.reflect.runtime.universe._
import scala.reflect.runtime.universe._

scala> { class B(b:Int); typeTag[B] }
<console>:11: error: No TypeTag available for B
              { class B(b:Int); typeTag[B] }
                                       ^
```
In 2.10.0-M7, this compiles fine.
